demos/spring-cloud-gateway/files/gateway-demo.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
  name: gateway-demo
  labels:
    app: gateway-demo
spec:
#  tls:
#  - secretName: tls-secret
#    hosts:
#      - animal-rescue.DNS_DOMAIN
  rules:
  - host: animal-rescue.DNS_DOMAIN
    http:
      paths:
      - backend:
          service:
            name: gateway-demo
            port:
              number: 80
        pathType: ImplementationSpecific
