demos/spring-cloud-gateway/files/scgw-routing-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: TBS_SOURCE_APP-ingress
  namespace: NAMESPACE
  labels:
    app: TBS_SOURCE_APP-app
spec:
  tls:
  - secretName: tls-secret
    hosts:
      - TBS_SOURCE_APP.DNS_DOMAIN
  rules:
  - host: TBS_SOURCE_APP.DNS_DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: SERVICE_NAME
          servicePort: 80
